--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html{
     font-family: 'Poppins', sans-serif;
 }
 body {
-    background: url(images/background.jpg);
+    background: url(bg.jpg);
     background-position: center;
     background-size: cover;
     width: 100%;
